app/jslib/jqtouch/themes/apple/theme.css
/* ... */
#jqt ul.row.t-hide {
    opacity: 0;
    -webkit-transition-property: opacity;
    -webkit-transition-duration: 175ms;
    -webkit-transition-timing-function: linear;
}

#jqt ul.row li {
    display: inline-block;
    font: 7pt;
    line-height: 8pt;
    width: 60px;
    border: 0px transparent;
    background: transparent;
    padding: 3px 12px 3px 12px;
    margin: 0;
    font-size: 8pt;
    background-repeat: no-repeat;
    color: #fff;
    text-align: center;
    text-shadow: 1pt 1pt 1.5pt #000;
}

/* @end */



/* @group Button */

#jqt .pushbutton, #jqt .whiteButton, #jqt .grayButton,
#jqt .redButton, #jqt .blueButton, #jqt .greenButton {
    display: block;
    border-width: 0 12px;
    margin: 10px 10px;
    padding: 10px;
    text-align: center;
    font-size: 20px;
    font-weight: bold;
    text-decoration: inherit;
    color: inherit;
}

#jqt .whiteButton, #jqt .pushbutton.white {
    -webkit-border-image: url(img/whiteButton.png) 0 12 0 12; -moz-border-image: url(img/whiteButton.png) 0 12 0 12; border-image: url(img/whiteButton.png) 0 12 0 12;
    text-shadow: rgba(255, 255, 255, 0.7) 0 1px 0;
}

#jqt .grayButton, #jqt .pushbutton.gray {
    -webkit-border-image: url(img/grayButton.png) 0 12 0 12; -moz-border-image: url(img/grayButton.png) 0 12 0 12; border-image: url(img/grayButton.png) 0 12 0 12;
    color: #FFFFFF;
}

#jqt .redButton, #jqt .pushbutton.red {
    -webkit-border-image: url(img/redButton.png) 0 12 0 12; -moz-border-image: url(img/redButton.png) 0 12 0 12; border-image: url(img/redButton.png) 0 12 0 12;
    color: #FFFFFF;
}

#jqt .greenButton, #jqt .pushbutton.green {
    -webkit-border-image: url(img/greenButton.png) 0 12 0 12; -moz-border-image: url(img/redButton.png) 0 12 0 12; border-image: url(img/greenButton.png) 0 12 0 12;
    color: #FFFFFF;
}

#jqt .pushbutton:active, #jqt .pushbutton.active,
#jqt .whiteButton:active, #jqt .grayButton:active, #jqt .redButton:active, #jqt .blueButton:active, #jqt .greenButton:active,
#jqt .whiteButton:active, #jqt .grayButton:active, #jqt .redButton:active, #jqt .blueButton:active, #jqt .greenButton:active {
    -webkit-border-image: url(img/activeButton.png) 0 12 0 12; -moz-border-image: url(img/redButton.png) 0 12 0 12; border-image: url(img/activeButton.png) 0 12 0 12;
}

/* @end */



/* @group Lists */

#jqt h1 + ul, #jqt h2 + ul, #jqt h3 + ul, #jqt h4 + ul, #jqt h5 + ul, #jqt h6 + ul {
    margin-top: 0;
}

#jqt ul, #jqt fieldset.rounded {
    color: black;
    font-weight: bold;
    font-size: 13pt;
    line-height: 21pt;
    padding: 0;
    margin: 15px 10px 17px 10px;
    list-style-type: none;
}

#jqt ul.rounded, #jqt fieldset.rounded {
    background-color: #fff;
    -webkit-border-radius: 8px; -moz-border-radius: 8px; border-radius: 8px;
    -webkit-box-shadow: #999 0px 0px 2px;
}

#jqt fieldset.rounded ul.rounded {
    margin: -15px -10px -17px -10px;
}

#jqt fieldset.rounded > *, #jqt fieldset.rounded > * > a:only-of-type {
    border-style: none;
    border-width: 0;
    -webkit-border-radius: 0; -moz-border-radius: 0; border-radius: 0;
}

#jqt fieldset.rounded {
    border: none;
}

#jqt fieldset.rounded input[type="radio"] {
    display: -webkit-box; display: -moz-box; display: box;
    -webkit-appearance: none; -moz-appearance: none;
    -webkit-box-pack: justify;
    -webkit-box-align: center;
    -webkit-box-orient: horizontal; -moz-box-orient: horizontal; box-orient: horizontal;
    width: 100%;
    line-height: 28px;
    font-size: 28px;
    font-weight: bold;
    color: inherit;
}

#jqt fieldset.rounded > input[type="radio"] {
    min-height: 44px;
    background-color: white;
    color: black;
}

#jqt ul.rounded > li:first-child, #jqt ul.rounded > li:first-child > a:only-of-type,
#jqt fieldset.rounded > *:first-child, #jqt fieldset.rounded > *:first-child > a:only-of-type {
    border-top: 0;
    -webkit-border-top-left-radius: 8px;
    -webkit-border-top-right-radius: 8px;
    -moz-border-top-left-radius: 8px;
    -moz-border-top-right-radius: 8px;
    border-top-left-radius: 8px;
    border-top-right-radius: 8px;
}

#jqt ul.rounded > li:last-child, #jqt ul.rounded > li:last-child > a:only-of-type,
#jqt fieldset.rounded > *:last-child, #jqt fieldset.rounded > *:last-child > a:only-of-type {
    -webkit-border-bottom-left-radius: 8px;
    -webkit-border-bottom-right-radius: 8px;
    -moz-border-bottom-left-radius: 8px;
    -moz-border-bottom-right-radius: 8px;
    border-bottom-left-radius: 8px;
    border-bottom-right-radius: 8px;
}

#jqt ul li, #jqt fieldset.rounded > * {
    -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;
    font-size: inherit;
    color: #222;
    list-style-type: none;
    padding: 10px;
    line-height: 23px;
    -webkit-transform: translate3d(0,0,0); /* expensive way to avoid flickr */
    min-height: 44px;
}

#jqt ul.metal li, #jqt ul.plastic li, #jqt ul.edgetoedge li, #jqt ul.rounded li,
#jqt ul.individual li, #jqt ul.mail li, #jqt fieldset.rounded > * {
    border-top: 1px solid #E0E0E0;
}

#jqt ul li > a, #jqt fieldset.rounded > * > a:only-of-type {
    margin: -10px;
    padding: 10px;
}

#jqt fieldset.rounded > a {
    display: block;
    text-decoration:none
}

#jqt ul.mail li {
    height: 78px;
    color: #000;
    line-height: 22px;
    padding-left: 30px;
    padding-right: 10px;
    padding-top: 1px;
    padding-bottom: 3px;
    overflow: hidden;
    text-overflow: ellipsis;
}

#jqt ul.mail li > a {
    margin: -15px;
    padding: 15px;
}

#jqt ul li:empty {
    min-height: 0px;
    height: 0px;
    border: 0px solid;
    padding: 0;
    margin: 0;
    outline: 0;
}

#jqt ul.mail li .date {
    position: relative;
    color: #2470D8;
    float: right;
    top: 2px;
    font-size: 15px;
    line-height: 18px;
    font-weight: 100;
}
/* ... */

